# Conkey

./: .gitignore  Conkey.klc  Documentation.md  Documentation.tex  Keys.md  LICENSE  README.md  conkey.config  doc.tex
ms2mim/: README.md  default.nix  ms2mim.cabal  stack.yaml
ms2mim/app/: Main.hs
ms2mim/src/Convert/: Intermediate.hs  MS2MIM.hs  XCompose.hs
ms2mim/src/M17N/: Keyboard.hs  Print.hs
ms2mim/src/MSKLC/: Keyboard.hs  Parser.hs
ms2mim/src/XCompose/: Keyboard.hs  Print.hs  keysyms
